--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-i18next",
+  "name": "react-nextjs-profile",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,13 +7,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.2",
     "i18next": "^10.0.7",
     "isomorphic-unfetch": "^2.0.0",
+    "lodash": "^4.17.5",
     "next": "^5.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-i18next": "^6.1.0",
     "semantic-ui-react": "^0.79.0"
   },
-  "license": "ISC"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0"
+  }
 }
