--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
+    "express": "^4.16.3",
+    "helmet": "^3.12.0",
     "i18next": "^10.0.7",
     "isomorphic-unfetch": "^2.0.0",
     "lodash": "^4.17.5",
