--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-i18next": "^6.1.0",
-    "semantic-ui-react": "^0.79.0"
+    "semantic-ui-react": "^0.79.0",
+    "styled-components": "^3.2.5"
   },
   "license": "MIT",
   "devDependencies": {
