--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     "transform-runtime",
-    "transform-react-inline-elements"
+    "transform-react-inline-elements",
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
   ]
 }
