--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "4.9.0",
