--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: node_js
 node_js:
   - "node"
 
-script:
+before_script:
   - yarn lint
+
+script:
   - yarn build
+
+notifications:
+  email: false
