--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "precommit": "yarn lint"
+    "precommit": "yarn lint",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
@@ -25,14 +26,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
-    "husky": "^0.14.3"
+    "husky": "^0.14.3",
+    "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.1"
   }
 }
