--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "eslint .",
     "precommit": "yarn lint",
-    "postinstall": "chmod -R +x node_modules/next/dist/bin/next-* && npm run build"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "babel-eslint": "^8.2.2",
+    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "i18next": "^10.0.7",
@@ -26,9 +29,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.5.1",
-    "babel-plugin-transform-react-inline-elements": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "2.7.0",
