--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   },
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-jest": "^22.4.3",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
-    "i18next": "^10.0.7",
     "isomorphic-unfetch": "^2.0.0",
     "lodash": "^4.17.5",
     "next": "^5.1.0",
@@ -27,6 +26,7 @@
     "react-dom": "^16.0.0",
     "react-ga": "^2.4.1",
     "react-i18next": "^6.1.0",
+    "react-i18nify": "^1.11.12",
     "semantic-ui-react": "^0.79.0",
     "styled-components": "^3.2.5"
   },
