--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.5.1",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "eslint": "^4.0.0",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "isomorphic-unfetch": "^2.0.0",
@@ -31,7 +32,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "5.0.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jest": "^21.15.0",
