--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "helmet": "^3.12.0",
     "isomorphic-unfetch": "^2.0.0",
     "lodash": "^4.17.5",
-    "next": "^6.0.1",
+    "next": "^5.1.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-ga": "^2.4.1",
@@ -31,7 +31,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "5.0.1",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "2.13.0",
     "eslint-plugin-jest": "^21.15.0",
