Update all dependencies

--- a/package.json
+++ b/package.json
@@ -4,41 +4,41 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "start": "next start",
     "lint": "eslint .",
     "precommit": "yarn lint",
     "test": "NODE_ENV=test jest",
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.0.0",
-    "babel-plugin-styled-components": "^1.5.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-styled-components": "^1.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "express": "^4.16.3",
-    "helmet": "^3.12.0",
-    "isomorphic-unfetch": "^2.0.0",
-    "lodash": "^4.17.5",
-    "next": "^6.1.2",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-ga": "^2.4.1",
-    "react-i18nify": "^1.11.12",
-    "semantic-ui-react": "^0.82.0",
-    "styled-components": "^3.2.5"
+    "express": "^4.16.4",
+    "helmet": "^3.14.0",
+    "isomorphic-unfetch": "^3.0.0",
+    "lodash": "^4.17.11",
+    "next": "^7.0.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-ga": "^2.5.3",
+    "react-i18nify": "^1.11.14",
+    "semantic-ui-react": "^0.82.5",
+    "styled-components": "^4.0.0"
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.0.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jest": "^21.15.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jest": "^21.25.1",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
-    "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "react-test-renderer": "^16.3.1"
+    "husky": "^1.1.2",
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.5.2"
   }
 }
